--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,3 @@
-* {
-    overflow-x: clip;
-}
-
 body {
     margin: 0;
     background: white;
@@ -14,13 +10,13 @@ body {
     width: 90%;
     margin: 0 auto;
     font-family: 'Rubik', sans-serif;
-    z-index: 1;
 }
 
 header {
     background: #fff;
     height: 10vh;
     background: rgba(1, 1, 1, 0.03);
+    z-index: 5;
 }
 
 header::after {
@@ -100,17 +96,19 @@ nav a:hover::before {
         height: 10vh;
     }
     nav {
+        z-index: 6;
         display: flex;
         justify-content: space-around;
         height: 0vh;
         padding: 3.25vh 0;
     }
     nav ul {
+        z-index: 7;
         overflow-x: hidden;
         position: absolute;
         justify-content: space-around;
         right: 0px;
-        height: 90vh;
+        height: 87vh;
         top: 10vh;
         background-color: #0a38cf;
         display: flex;
@@ -121,6 +119,7 @@ nav a:hover::before {
         transition: opacity 0.21s ease-in;
     }
     nav a {
+        z-index: 8;
         color: white;
         font-size: 16px;
         letter-spacing: 3px;
@@ -146,6 +145,10 @@ nav a:hover::before {
 .nav-active {
     width: 100%;
     opacity: 0.95;
+}
+
+.bod-active {
+    overflow: hidden;
 }
 
 
